jgit (3.2.0-1) UNRELEASED; urgency=medium

  * New Upstream release.

 -- Jakub Adam <jakub.adam@ktknet.cz>  Mon, 23 Dec 2013 19:18:17 +0100

jgit (3.1.0-2) unstable; urgency=low

  [ Jakub Adam ]
  * Fix FTBFS with args4j 2.0.25 (Closes: #730878).
  * Make Vcs-* fields canonic.

  [ tony mancill ]
  * Bump Standards-Version to 3.9.5 (no changes).
  * Update debian/compat and debhelper dependency to 9.

 -- Jakub Adam <jakub.adam@ktknet.cz>  Tue, 03 Dec 2013 16:06:14 +0100

jgit (3.1.0-1) unstable; urgency=low

  * New Upstream release.
  * Refreshed d/patches/javaewah-compatibility.patch.
  * Enable build of new artifact org.eclipse.jgit.archive.

 -- Jakub Adam <jakub.adam@ktknet.cz>  Tue, 08 Oct 2013 19:57:23 +0200

jgit (3.0.3-1) unstable; urgency=low

  * New Upstream release.

 -- Jakub Adam <jakub.adam@ktknet.cz>  Tue, 17 Sep 2013 19:52:14 +0200

jgit (3.0.0-1) unstable; urgency=low

  * New Upstream release.
  * Use maven.ignoreRules to remove unnecessary maven plugins.
  * Add libjavaewah-java to Build-Depends.
  * Don't install org.eclipse.jgit.junit.jar, it's used only by tests.
  * Use xz for upstream tarball compression.
  * Enable build of org.eclipse.jgit.java7.jar.

 -- Jakub Adam <jakub.adam@ktknet.cz>  Tue, 11 Jun 2013 19:22:57 +0200

jgit (2.3.1-2) unstable; urgency=low

  * Team upload.
  * Upload to unstable for jessie release cycle.

 -- tony mancill <tmancill@debian.org>  Sun, 05 May 2013 18:50:33 -0700

jgit (2.3.1-1) experimental; urgency=low

  * New Upstream release.
  * Refreshed debian-custom-build.patch.
  * Remove mention of iplog jar from packaging files (removed upstream).

 -- Jakub Adam <jakub.adam@ktknet.cz>  Fri, 22 Feb 2013 16:47:29 +0100

jgit (2.2.0-1) experimental; urgency=low

  * New Upstream release.
  * Remove /usr/share/java prefix from Class-Path entries.
  * Add dependency on libcommon-compress-java.
  * Move JGit Ant tasks into separate binary package. Avoids in most
    use cases unnecessary dependency on Ant.